src/opt/tests/snapshots/sroa__time_travel.snap
---
created: "2019-04-27T22:01:40.179877500Z"
creator: insta@0.7.4
source: src/opt/tests/sroa.rs
expression: "\n    g = function() {\n        something.x;\n    }\n    let something = { x: 1 };\n    something.x;\n"
---
_val = <function>:
    <dead> = "x"
    <dead> = *x
<global g> <- _val
<dead> = "x"
_val$1 = 1
x <= _val$1
<dead> = "x"
<dead> = *x
